edit empty dynamic component